Bug: 565920 Reviewer: Peter Comment: Fix truncation of form buttons in German

--- a/trunk/ssf/web/docroot/css/forum.css
+++ b/trunk/ssf/web/docroot/css/forum.css
@@ -235,7 +235,8 @@ span.ss_buttonBarRight {
 div.ss_buttonBarLeft {
   margin: 0px 5px 0px 5px;
   text-align: left;
-  }
+  display: inline;
+}
 
 /* right-aligned buttons (usually at the top of the form) */
 div.ss_buttonBarRight {
